--- a/styles/root.scss
+++ b/styles/root.scss
@@ -1,6 +1,5 @@
 @import "_colors.scss";
 
-
 h1, h2, h3, h4, h5, h6, p {
   color: $site-text;
 }
@@ -11,3 +10,16 @@ html, body {
   background-color: $offwhite;
 }
 
+a {
+  text-decoration: none;
+  color: $site-link
+}
+
+a:hover {
+  text-decoration: none;
+  color: $site-link-hover
+}
+
+a:visited {
+  color: $site-link
+}
