--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,4 +1,5 @@
 $blue: #1976d2;
+$blue-lighter: #579bde;
 $grey: #24272b;
 $black: #0e1116;
 $grey: #24272b;
@@ -13,3 +14,7 @@ $site-dark:  $black;
 $site-text: $black;
 $site-header-link: $offwhite;
 $site-header-link-hover: $white;
+
+
+$site-link: $blue;
+$site-link-hover: $blue-lighter;
