Made active link different colkor

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -6,6 +6,7 @@ $grey: #24272b;
 $offwhite: #e5e5e5;
 $white: #fff;
 $grey-light: #94989b;
+$orange: #ff785a;
 
 $site-primary: $blue;
 $site-secondary: $grey;
