--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -1,15 +1,30 @@
 @import "_colors.scss";
 
-.navbar-container {
+@mixin navbar-base {
   padding: 2em;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+@mixin navitem-text-base {
+  text-decoration: none;
+  font-size: 1.4em;
+  font-weight: bold;
+}
+
+.navbar-container {
+  @include navbar-base;
   border-bottom: 1.5px solid $grey-light;
   background-color: $site-primary;
   /* Do not touch this, very picky */
   box-shadow: 3.5px 2.0px 5px 1.5px $grey-light;
+}
+
+.navbar-container-transparent {
+  @include navbar-base;
+  background-color: transparent;
 }
 
 .navbar-navitem {
@@ -22,6 +37,10 @@
   font-size: 1.4em;
   font-weight: bold;
   color: $site-header-link !important;
+}
+
+.navbar-navitem-text-active {
+  color: $orange !important;
 }
 
 .navbar-navitem-text:hover {
@@ -55,3 +74,5 @@
     margin-bottom: 1em;
   }
 }
+
+
