Wip creating buttons

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,7 +7,7 @@
 
 // Component Level CSS
 @import "components/project-card.module.scss";
-
+@import "components/button.module.scss";
 
 // Module Level CSS
 @import "pages/index.module.scss"
