Add resume buttons

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,4 +10,5 @@
 @import "components/button.module.scss";
 
 // Module Level CSS
-@import "pages/index.module.scss"
+@import "pages/index.module.scss";
+@import "pages/resume.module.scss";
