Rename classes, remove some outer classes

--- a/styles/components/project-card.module.scss
+++ b/styles/components/project-card.module.scss
@@ -1,9 +1,4 @@
-@import "../_colors";
-
-$box-shadow-amt: .75px;
-
-$box-shadow-right: 1.5px;
-$box-shadow-bottom: 1.5px;
+@import "../variables";
 
 .project-card-container {
   margin: 1.5em;
