--- a/styles/components/project-card.module.scss
+++ b/styles/components/project-card.module.scss
@@ -1,4 +1,4 @@
-@import "../variables";
+@import '../variables';
 
 .project-card-container {
   margin: 1.5em;
@@ -12,13 +12,14 @@
 }
 
 .project-card-link-container {
-  margin-left: 5px;
   display: flex;
+  margin-left: 5px;
 }
 
 .project-card-header-text {
-  font-size: 22px
+  font-size: 22px;
 }
+
 .project-card-desc-text {
   font-size: 16px;
   margin-top: 2.5px;
@@ -26,8 +27,8 @@
 
 .project-card-link-item-container {
   align-self: center;
-  padding: 5px;
   margin-right: 5px;
+  padding: 5px;
 }
 
 .project-card-link-item-text {
@@ -37,6 +38,7 @@
 .project-footer {
   margin-left: 1.5em;
   padding-top: 2.5em;
+
   a {
     font-size: 20px;
   }
@@ -46,12 +48,14 @@
   .project-card-header-container {
     flex-direction: column;
   }
+
   .project-card-link-container {
     margin-left: 0;
     margin-right: 5px;
   }
+
   .project-card-link-item-container {
-    padding-left: 0px;
+    padding-left: 0;
     padding-right: 5px;
 
   }
