--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -4,7 +4,14 @@ $site-font: 'Roboto Condensed', sans-serif;
 $site-font-size: 24px;
 $site-line-height: $site-font-size * 1.5;
 
-h1,h2,h3,h4,h5,h6,a,p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+p {
   font-family: $site-font;
 }
 
