Refactor some styles, add some verbiage to home page

--- a/styles/components/navbar.module.scss
+++ b/styles/components/navbar.module.scss
@@ -1,4 +1,5 @@
 @import '../variables';
+@import '../util.scss';
 
 .navbar-container {
   align-items: center;
@@ -10,12 +11,21 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 2em;
+  @include mobile {
+    flex-direction: column;
+    height: unset;
+    justify-content: flex-start;
+  }
 }
 
 
 .navbar-navitem {
   margin-left: 1em;
   margin-right: 1em;
+  @include mobile {
+    margin-bottom: 1em;
+    margin-top: 1em;
+  }
 }
 
 .navbar-navitem-text {
@@ -47,19 +57,4 @@
     color: $site-header-link-hover !important;
   }
 }
-
-
-@media (max-width: 1200px) {
-  .navbar-container {
-    flex-direction: column;
-    height: unset;
-    justify-content: flex-start;
-  }
-
-  .navbar-navitem {
-    margin-bottom: 1em;
-    margin-top: 1em;
-  }
-}
-
 
