--- a/styles/components/project-card.module.scss
+++ b/styles/components/project-card.module.scss
@@ -1,4 +1,5 @@
 @import '../variables';
+@import '../util';
 
 .project-card-container {
   margin: 1.5em;
@@ -9,11 +10,18 @@
 
 .project-card-header-container {
   display: flex;
+  @include mobile {
+    flex-direction: column;
+  }
 }
 
 .project-card-link-container {
   display: flex;
   margin-left: 5px;
+  @include mobile {
+    margin-left: 0;
+    margin-right: 5px;
+  }
 }
 
 .project-card-header-text {
@@ -29,6 +37,10 @@
   align-self: center;
   margin-right: 5px;
   padding: 5px;
+  @include mobile {
+    padding-left: 0;
+    padding-right: 5px;
+  }
 }
 
 .project-card-link-item-text {
@@ -41,22 +53,5 @@
 
   a {
     font-size: 20px;
-  }
-}
-
-@media (max-width: 1200px) {
-  .project-card-header-container {
-    flex-direction: column;
-  }
-
-  .project-card-link-container {
-    margin-left: 0;
-    margin-right: 5px;
-  }
-
-  .project-card-link-item-container {
-    padding-left: 0;
-    padding-right: 5px;
-
   }
 }
