--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -3,10 +3,18 @@
   flex-direction: column;
   margin: 0;
   min-height: 100%;
+  width: 100%;
 }
 
 .main-layout-content-container {
   flex-grow: 1;
   max-width: 1200px;
+  min-width: 100%;
   padding: 1.5em;
+}
+
+.layout-centered {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
