--- a/styles/components/button.module.scss
+++ b/styles/components/button.module.scss
@@ -1,9 +1,28 @@
-.link-button {
-  appearance: button;
+@import '../variables';
+
+@mixin button-base {
   border: 1px solid;
   border-radius: 7.5px;
-  color: initial;
+  font-family: $site-font;
+  font-size: 16px;
+  font-weight: bold;
+  height: 50px;
   margin: 0.5em;
   padding: 1em;
+  width: 200px;
+}
+
+@mixin button {
+  @include button-base;
+  background-color: $site-primary;
+  color: $offwhite;
+}
+
+
+
+.link-button {
+  @include button-base;
+  appearance: button;
   text-decoration: none;
 }
+
