--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,7 +7,7 @@
 @import 'components/project-card.module';
 @import 'components/button.module';
 @import 'components/navbar.module';
-@import 'components/contact-form.module.scss';
+@import 'components/contact-form.module';
 
 // Module Level CSS
 @import 'pages/index.module';
