Updated links to resume

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,5 +10,4 @@
 @import 'components/contact-form.module';
 
 // Module Level CSS
-@import 'pages/index.module';
-@import 'pages/resume.module';
+@import 'pages/about.module';
