--- a/styles/components/contact-form.module.scss
+++ b/styles/components/contact-form.module.scss
@@ -3,11 +3,13 @@
 @import '../util';
 
 @mixin form-input-base {
-  border: 2px solid $site-primary;
-  border-radius: 2.5px;
-  box-shadow: 0 0 0 0 $grey-light;
+  border: 0.5px solid $white;
+  border-radius: 5px;
+  box-shadow: 2.5px 2.5px 0 0 $grey-light;
   font-family: $site-font;
   font-size: 18px;
+  height: 1.5em;
+  margin-top: 0.25em;
   padding: 0.5em;
 }
 
@@ -22,7 +24,9 @@
 
 .contact-form-label {
   font-family: $site-font;
+  font-size: 14px;
   margin-top: 1.5em;
+  text-transform: uppercase;
 }
 
 .contact-form-input {
@@ -31,6 +35,7 @@
 
 .contact-form-textarea {
   @include form-input-base;
+  height: 300px;
 }
 
 .contact-form-button-container {
