--- a/styles/pages/contact.module.scss
+++ b/styles/pages/contact.module.scss
@@ -3,3 +3,13 @@
 }
 
 
+.contact-page-temporary-link-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 1em;
+}
+
+.contact-page-temporary-link {
+  font-size: $site-font-size;
+}
