--- a/styles/pages/index.module.scss
+++ b/styles/pages/index.module.scss
@@ -1,3 +1,5 @@
+@import '../util';
+
 $header-font-size: 18px;
 $body-font-size: 16px;
 
@@ -42,8 +44,20 @@ $body-font-size: 16px;
   justify-content: center;
   padding-bottom: 1em;
   padding-top: 1em;
+  @include mobile {
+    flex-direction: column;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    
+  }
 
   
+}
+
+
+.header-container img {
+  align-self: center;
+  max-width: 128px;
 }
 
 .header-container p {
